<resources>
    <string name="app_name">StudyCase</string>
    <string name="txt1">Makan Malam</string>
    <string name="txt2">dengan Milea</string>
    <string name="eatbus">Eatbus</string>
    <string name="abnormals">Abnormal</string>
    <string name="txt4">Eatbus</string>
    <string name="menu">Menu</string>
    <string name="porsi">Porsi</string>
    <string name="harga">Harga</string>
    <string name="abnormal">Abnormal</string>
</resources>
